syntax = "proto3";

package servercore;

service SwarmServerService {
        rpc GetAgentStream (stream AgentMes) returns (stream AgentMes) {}
        rpc GetClientStream (stream ClientMes) returns (stream ClientMes) {}
        rpc DeclareAgent (DeclareRequest) returns (ServerRet) {}
}


message AgentMes {
        string function = 1;
        map<string, string> args = 2;
}

message ClientMes {
        string function = 1;
        map<string, string> args = 2;      
}

message DeclareRequest{
        string name = 1;
}

message ServerRet{
       bool ack = 1; 
}
